@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-18T16:23:13Z",
+  "timestamp" : "2022-05-19T01:34:29Z",
   "count_outdated" : 228,
   "uniques_outdated" : 151,
-  "count" : 274,
+  "count" : 276,
   "uniques" : 177,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
