@@ -1,5 +1,5 @@
 {
-  "count": 46,
+  "count": 48,
   "uniques": 10,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 1,
+      "count": 3,
       "uniques": 1
     }
   ]
