@@ -1,3 +1,10 @@
+2022-05-19T01:34:29Z:
+* notice: last 14d: unq all: 10 48
+* notice: prev accum: outdated-unq outdated-all / unq all: 151 228 / 177 274
+* notice: next accum: outdated-unq outdated-all / unq all: 151 228 / 177 276
+* notice: prev exec diff / last date diff / accum: unq all: +0 +2 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: changed dates: [2022-05-18]
+
 2022-05-18T16:23:13Z:
 * notice: last 14d: unq all: 10 46
 * notice: prev accum: outdated-unq outdated-all / unq all: 146 222 / 173 269
